# provider

./: Cargo.toml  LICENSE  README.md  diesel.toml
providers/my_plugins/: dummy.py  template_provider.py
src/: http.rs  lib.rs  models.rs  pyadapter.rs  query.rs  query_parser.rs  schema.rs  tests.rs
src/auth/: acl.rs  errors.rs  mod.rs  plugins.rs  projects.rs  repo.rs  service.rs  utils.rs
src/http/: files.rs  mod.rs
src/http/interface/: account.rs  init.rs  landing.rs  log.rs  login.rs  mod.rs  plugins.rs  projects.rs  providers.rs  users.rs
src/http/services/: files.rs  logs.rs  mod.rs  plugins.rs  projects.rs  roles.rs
src/providers/: mod.rs  pyprovider.rs  sec_edgar.rs  yahoo_finance.rs
src/tcp/: client.rs  mod.rs  response.rs  server.rs
src/tcp/client/: cli_client.rs  lib_client.rs  mod.rs
www/css/: base.css  plugins.css
www/js/: click_to_copy.js  dashboard_chart.js  navbar.js  plugins.js
