[package]
name = "provider"
version = "0.1.0"
edition = "2024"


[features]
# Opt-in features; pick one at a time.
cli-client = []
lib-client = []

# Optionally set a default:
default = ["lib-client"]


[dependencies]
crossbeam = "0.8.4"
polars = { version = "0.51.0", features = [
    "lazy",
    "json",
    "fmt",
    "serde",
    "diagonal_concat",
] }
serde = { version = "1.0.22", features = ["derive"] }

diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
    "r2d2",
] }
r2d2 = "0.8"
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
serde_json = "1.0.145"
log = "0.4.28"
env_logger = "0.11.8"
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.100"
rustyline = "12"
dirs = "5"
yahoo_finance_api = "4.0.0"
time = "0.3.44"
tokio = { version = "1.46.1", features = [
    "full",
    "test-util",
    "rt-multi-thread",
    "macros",
    "signal",
] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "0.6"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
scraper = "0.18"

# HTTP server
axum = "0.7"

# Python embedding
pyo3 = { version = "0.22", features = ["auto-initialize"] }
# (Optional) If you later want nicer serde bridging: pyo3-serde = "0.7"
diesel_migrations = { version = "2.1", features = ["sqlite"] }  # <-- add this
# tui
ratatui = "0.26"
crossterm = "0.27"

# # Gate TUI deps behind feature to slim lib builds:
# [features]
# cli-client = ["dep:ratatui", "dep:crossterm"]
# lib-client = []

# [package.metadata.docs.rs]
# # Build docs with the lib-client feature so examples compile.
# features = ["lib-client"]
